[package]
name = "rust-hexo-comments"
version = "0.1.0"
edition = "2021"
description = "评论系统插件，支持 Giscus 和 Disqus"
authors = ["Rust-Hexo Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rust-hexo = { path = "../.." }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
semver = "1.0"
tracing = "0.1" 