[package]
name = "rust-hexo-search"
version = "0.1.0"
edition = "2021"
description = "搜索插件，支持全文搜索功能"
authors = ["Rust-Hexo Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rust-hexo = { path = "../.." }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
semver = "1.0"
tracing = "0.1" 